--- a/THANKS
+++ b/THANKS
@@ -26,6 +26,7 @@ Clytie Siddall
 Ryan Slack
 Yvan Bassuel
 Francis Brosnan Blazquez
+James Mansion
 
 ----------------------------------------------------------------------
 Copying and distribution of this file, with or without modification,
