--- a/doc/gsasl.texi
+++ b/doc/gsasl.texi
@@ -277,6 +277,12 @@ Processing of non-ASCII username and passwords requires the SASLprep
 implementation in GNU LibIDN (@url{http://josefsson.org/libidn/}.
 This is needed for full conformance with the latest SASL protocol
 drafts, but is optional in the library for improved portability.
+
+@item Libgcrypt
+The GNU SASL library ships with its own cryptographic implementation,
+but it can use the one in libgcrypt (@url{http://www.gnupg.org/}
+instead, if it is available.  This is typically useful for desktop
+machines which have libgcrypt installed.
 @end table
 
 The command-line interface to GNU SASL requires a POSIX or Windows
