--- a/NEWS
+++ b/NEWS
@@ -11,6 +11,8 @@ SASL.  That include the manual, the command line tool, and self tests.
 ** New section "Requirements" in the manual, lists the external components.
 Suggested by James Mansion.
 
+** Update of gnulib files.
+
 * Version 0.2.13 (released 2006-06-14)
 
 ** Update of gnulib files.
