--- a/NEWS
+++ b/NEWS
@@ -6,7 +6,7 @@ Note that changes to the GNU SASL Library is documented in lib/NEWS.
 This file track changes to the remaining, non-library, parts of GNU
 SASL.  That include the manual, the command line tool, and self tests.
 
-* Version 0.2.14 (unreleased)
+* Version 0.2.14 (released 2006-08-19)
 
 ** New section "Requirements" in the manual, lists the external components.
 Suggested by James Mansion.
