--- a/lib/ChangeLog
+++ b/lib/ChangeLog
@@ -1,3 +1,56 @@
+2006-08-19  Simon Josefsson <simon@josefsson.org>
+
+	* NEWS: Version 0.2.14.
+
+2006-08-19  Simon Josefsson <simon@josefsson.org>
+
+	* po/fr.po, po/ga.po, po/nl.po, po/pl.po, po/ro.po, po/sr.po,
+	po/sv.po, po/vi.po: Sync with TP.
+
+2006-08-19  Simon Josefsson <simon@josefsson.org>
+
+	* gl/m4/base64.m4, gl/m4/gc.m4, gl/m4/gnulib-comp.m4,
+	gl/m4/memxor.m4, gl/m4/restrict.m4: Update.
+
+2006-08-10  Simon Josefsson <simon@josefsson.org>
+
+	* src/gsasl.h: Bump version.
+
+2006-08-09  Simon Josefsson <simon@josefsson.org>
+
+	* configure.ac: Bump versions.
+
+2006-08-09  Simon Josefsson <simon@josefsson.org>
+
+	* gl/Makefile.am, gl/gettext.h, gl/printf-args.c, gl/stdint_.h,
+	gl/vasprintf.h, gl/m4/absolute-header.m4, gl/m4/getline.m4,
+	gl/m4/gettext.m4, gl/m4/gnulib-cache.m4, gl/m4/gnulib-comp.m4,
+	gl/m4/inttypes-h.m4, gl/m4/inttypes-pri.m4, gl/m4/inttypes.m4,
+	gl/m4/isc-posix.m4, gl/m4/lib-link.m4, gl/m4/lock.m4, gl/m4/nls.m4,
+	gl/m4/onceonly_2_57.m4, gl/m4/po.m4, gl/m4/stdint.m4,
+	gl/m4/visibility.m4: Update.
+
+2006-08-08  Simon Josefsson <simon@josefsson.org>
+
+	* NEWS: Add.
+
+2006-08-08  Simon Josefsson <simon@josefsson.org>
+
+	* src/obsolete.c: Doc fix.
+
+2006-08-08  Simon Josefsson <simon@josefsson.org>
+
+	* src/callback.c, src/gsasl.h, src/internal.h: Add
+	gsasl_session_hook_set and gsasl_session_hook_get, based on
+	suggestion by "MANSION, James, GBM" <James.MANSION@rbos.com>.  Doc
+	fix gsasl_callback_hook_set and gsasl_callback_hook_get.  Add new
+	variable application_hook to internal Gsasl_session type.
+
+2006-07-14  Simon Josefsson <simon@josefsson.org>
+
+	* po/fr.po, po/ga.po, po/nl.po, po/pl.po, po/ro.po, po/sr.po,
+	po/sv.po, po/vi.po: Generated.
+
 2006-07-14  Simon Josefsson <simon@josefsson.org>
 
 	* NEWS: Version 0.2.13.
