--- a/lib/po/ga.po
+++ b/lib/po/ga.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: libgsasl 0.2.8-b20050829\n"
 "Report-Msgid-Bugs-To: bug-gsasl@gnu.org\n"
-"POT-Creation-Date: 2005-08-29 01:49+0200\n"
+"POT-Creation-Date: 2006-08-19 11:12+0200\n"
 "PO-Revision-Date: 2005-09-15 16:25-0500\n"
 "Last-Translator: Kevin Patrick Scannell <scannell@SLU.EDU>\n"
 "Language-Team: Irish <ga@li.org>\n"
@@ -36,32 +36,76 @@ msgstr "Earráid ionchódaithe (bonn 64) sa leabharlann SASL"
 msgid "Low-level crypto error in SASL library"
 msgstr "Earráid chriptithe íseal-leibhéil sa leabharlann SASL"
 
-msgid "GSSAPI library could not deallocate memory in gss_release_buffer() in SASL library.  This is a serious internal error."
-msgstr "Níorbh fhéidir leis an leabharlann GSSAPI cuimhne a saoradh i gss_release_buffer() sa leabharlann SASL.  Is earráid inmheánach trom í seo."
+msgid ""
+"GSSAPI library could not deallocate memory in gss_release_buffer() in SASL "
+"library.  This is a serious internal error."
+msgstr ""
+"Níorbh fhéidir leis an leabharlann GSSAPI cuimhne a saoradh i "
+"gss_release_buffer() sa leabharlann SASL.  Is earráid inmheánach trom í seo."
 
-msgid "GSSAPI library could not understand a peer name in gss_import_name() in SASL library.  This may be due to incorrect user supplied data."
-msgstr "Níor thuig an leabharlann GSSAPI ainm comhghleacaí i gss_import_name() sa leabharlann SASL.  B'fhéidir go bhfuil sé seo mar thoradh ar sonraí mhíchearta ón úsáideoir."
+msgid ""
+"GSSAPI library could not understand a peer name in gss_import_name() in SASL "
+"library.  This may be due to incorrect user supplied data."
+msgstr ""
+"Níor thuig an leabharlann GSSAPI ainm comhghleacaí i gss_import_name() sa "
+"leabharlann SASL.  B'fhéidir go bhfuil sé seo mar thoradh ar sonraí "
+"mhíchearta ón úsáideoir."
 
-msgid "GSSAPI error in client while negotiating security context in gss_init_sec_context() in SASL library.  This is most likely due insufficient credentials or malicious interactions."
-msgstr "Earráid GSSAPI sa chliant agus comhthéacs slándála á socrú i gss_init_sec_context() sa leabharlann SASL.  Is dócha go bhfuil sé seo mar thoradh ar dintiúirí easpacha nó idirghnímh mailíseacha."
+msgid ""
+"GSSAPI error in client while negotiating security context in "
+"gss_init_sec_context() in SASL library.  This is most likely due "
+"insufficient credentials or malicious interactions."
+msgstr ""
+"Earráid GSSAPI sa chliant agus comhthéacs slándála á socrú i "
+"gss_init_sec_context() sa leabharlann SASL.  Is dócha go bhfuil sé seo mar "
+"thoradh ar dintiúirí easpacha nó idirghnímh mailíseacha."
 
-msgid "GSSAPI error in server while negotiating security context in gss_init_sec_context() in SASL library.  This is most likely due insufficient credentials or malicious interactions."
-msgstr "Earráid GSSAPI san fhreastalaí agus comhthéacs slándála á socrú i gss_init_sec_context() sa leabharlann SASL.  Is dócha go bhfuil sé seo mar thoradh ar dintiúirí easpacha nó idirghnímh mailíseacha."
+msgid ""
+"GSSAPI error in server while negotiating security context in "
+"gss_init_sec_context() in SASL library.  This is most likely due "
+"insufficient credentials or malicious interactions."
+msgstr ""
+"Earráid GSSAPI san fhreastalaí agus comhthéacs slándála á socrú i "
+"gss_init_sec_context() sa leabharlann SASL.  Is dócha go bhfuil sé seo mar "
+"thoradh ar dintiúirí easpacha nó idirghnímh mailíseacha."
 
-msgid "GSSAPI error while decrypting or decoding data in gss_unwrap() in SASL library.  This is most likely due to data corruption."
-msgstr "Earráid GSSAPI agus sonraí á ndíchriptiú nó á ndíchódú i gss_unwrap() sa leabharlann SASL.  Is dócha go bhfuil sé seo mar thoradh ar sonraí truaillithe."
+msgid ""
+"GSSAPI error while decrypting or decoding data in gss_unwrap() in SASL "
+"library.  This is most likely due to data corruption."
+msgstr ""
+"Earráid GSSAPI agus sonraí á ndíchriptiú nó á ndíchódú i gss_unwrap() sa "
+"leabharlann SASL.  Is dócha go bhfuil sé seo mar thoradh ar sonraí "
+"truaillithe."
 
-msgid "GSSAPI error while encrypting or encoding data in gss_wrap() in SASL library."
-msgstr "Earráid GSSAPI agus sonraí á gcriptiú nó á n-ionchódú i gss_wrap() sa leabharlann SASL."
+msgid ""
+"GSSAPI error while encrypting or encoding data in gss_wrap() in SASL library."
+msgstr ""
+"Earráid GSSAPI agus sonraí á gcriptiú nó á n-ionchódú i gss_wrap() sa "
+"leabharlann SASL."
 
-msgid "GSSAPI error acquiring credentials in gss_acquire_cred() in SASL library.  This is most likely due to not having the proper Kerberos key available in /etc/krb5.keytab on the server."
-msgstr "Earráid GSSAPI agus dintiúirí á bhfáil i gss_acquire_cred() sa leabharlann SASL.  Is dócha go bhfuil sé seo mar thoradh ar easpa eochair Kerberos go cuí i etc/krb5.keytab ar an fhreastalaí."
+msgid ""
+"GSSAPI error acquiring credentials in gss_acquire_cred() in SASL library.  "
+"This is most likely due to not having the proper Kerberos key available in /"
+"etc/krb5.keytab on the server."
+msgstr ""
+"Earráid GSSAPI agus dintiúirí á bhfáil i gss_acquire_cred() sa leabharlann "
+"SASL.  Is dócha go bhfuil sé seo mar thoradh ar easpa eochair Kerberos go "
+"cuí i etc/krb5.keytab ar an fhreastalaí."
 
-msgid "GSSAPI error creating a display name denoting the client in gss_display_name() in SASL library.  This is probably because the client supplied bad data."
-msgstr "Earráid GSSAPI agus ainm taispeána don chliant á chruthú i gss_display_name() sa leabharlann SASL.  Is dócha go bhfuil sé seo mar thoradh ar sonraí truaillithe ón chliant."
+msgid ""
+"GSSAPI error creating a display name denoting the client in gss_display_name"
+"() in SASL library.  This is probably because the client supplied bad data."
+msgstr ""
+"Earráid GSSAPI agus ainm taispeána don chliant á chruthú i gss_display_name"
+"() sa leabharlann SASL.  Is dócha go bhfuil sé seo mar thoradh ar sonraí "
+"truaillithe ón chliant."
 
-msgid "Other entity requested integrity or confidentiality protection in GSSAPI mechanism but this is currently not implemented."
-msgstr "D'iarr aonán eile cosaint sláine nó rúndachta sa shásra GSSAPI ach níl an gné seo ar fáil faoi láthair."
+msgid ""
+"Other entity requested integrity or confidentiality protection in GSSAPI "
+"mechanism but this is currently not implemented."
+msgstr ""
+"D'iarr aonán eile cosaint sláine nó rúndachta sa shásra GSSAPI ach níl an "
+"gné seo ar fáil faoi láthair."
 
 msgid "SASL mechanism could not parse input"
 msgstr "Níorbh fhéidir leis an sásra SASL an t-ionchur a pharsáil"
@@ -73,22 +117,31 @@ msgid "Integrity error in application payload"
 msgstr "Earráid sláine sa phálasta feidhmchláir"
 
 msgid "Client-side functionality not available in library (application error)"
-msgstr "Níl feidhmiúlacht den chliant le fáil sa leabharlann (earráid fheidhmchláir)"
+msgstr ""
+"Níl feidhmiúlacht den chliant le fáil sa leabharlann (earráid fheidhmchláir)"
 
 msgid "Server-side functionality not available in library (application error)"
-msgstr "Níl feidhmiúlacht den fhreastalaí le fáil sa leabharlann (earráid fheidhmchláir)"
+msgstr ""
+"Níl feidhmiúlacht den fhreastalaí le fáil sa leabharlann (earráid "
+"fheidhmchláir)"
 
 msgid "No callback specified by caller (application error)."
 msgstr "Níor thug an glaoiteoir feidhm chuí (earráid fheidhmchláir)."
 
 msgid "Authentication failed because the anonymous token was not provided."
-msgstr "Theip ar fhíordheimhniú gan ainm ós rud é nach socraíodh ceadchomhartha gan ainm."
+msgstr ""
+"Theip ar fhíordheimhniú gan ainm ós rud é nach socraíodh ceadchomhartha gan "
+"ainm."
 
-msgid "Authentication failed because the authentication identity was not provided."
-msgstr "Theip ar fhíordheimhniú ós rud é nach socraíodh aitheantas fíordheimhnithe."
+msgid ""
+"Authentication failed because the authentication identity was not provided."
+msgstr ""
+"Theip ar fhíordheimhniú ós rud é nach socraíodh aitheantas fíordheimhnithe."
 
-msgid "Authentication failed because the authorization identity was not provided."
-msgstr "Theip ar fhíordheimhniú ós rud é nach socraíodh an t-aitheantas údáraithe."
+msgid ""
+"Authentication failed because the authorization identity was not provided."
+msgstr ""
+"Theip ar fhíordheimhniú ós rud é nach socraíodh an t-aitheantas údáraithe."
 
 msgid "Authentication failed because the password was not provided."
 msgstr "Theip ar fhíordheimhniú ós rud é nach tugadh an focal faire."
@@ -118,58 +171,127 @@ msgid "Could not close file in SASL library"
 msgstr "Níorbh fhéidir comhad a dhúnadh sa leabharlann SASL"
 
 msgid "Cannot get internal library handle (library error)"
-msgstr "Níorbh fhéidir lorgán leabharlainne inmheánach a fháil (earráid leabharlainne)"
+msgstr ""
+"Níorbh fhéidir lorgán leabharlainne inmheánach a fháil (earráid "
+"leabharlainne)"
 
-msgid "SASL mechanism needs gsasl_client_callback_anonymous() callback (application error)"
-msgstr "Teastaíonn an sásra SASL feidhm gsasl_client_callback_anonymous() (earráid fheidhmchláir)"
+msgid ""
+"SASL mechanism needs gsasl_client_callback_anonymous() callback (application "
+"error)"
+msgstr ""
+"Teastaíonn an sásra SASL feidhm gsasl_client_callback_anonymous() (earráid "
+"fheidhmchláir)"
 
-msgid "SASL mechanism needs gsasl_client_callback_password() callback (application error)"
-msgstr "Teastaíonn an sásra SASL feidhm gsasl_client_callback_password() (earráid fheidhmchláir)"
+msgid ""
+"SASL mechanism needs gsasl_client_callback_password() callback (application "
+"error)"
+msgstr ""
+"Teastaíonn an sásra SASL feidhm gsasl_client_callback_password() (earráid "
+"fheidhmchláir)"
 
-msgid "SASL mechanism needs gsasl_client_callback_passcode() callback (application error)"
-msgstr "Teastaíonn an sásra SASL feidhm gsasl_client_callback_passcode() (earráid fheidhmchláir)"
+msgid ""
+"SASL mechanism needs gsasl_client_callback_passcode() callback (application "
+"error)"
+msgstr ""
+"Teastaíonn an sásra SASL feidhm gsasl_client_callback_passcode() (earráid "
+"fheidhmchláir)"
 
-msgid "SASL mechanism needs gsasl_client_callback_pin() callback (application error)"
-msgstr "Teastaíonn an sásra SASL feidhm gsasl_client_callback_pin() (earráid fheidhmchláir)"
+msgid ""
+"SASL mechanism needs gsasl_client_callback_pin() callback (application error)"
+msgstr ""
+"Teastaíonn an sásra SASL feidhm gsasl_client_callback_pin() (earráid "
+"fheidhmchláir)"
 
-msgid "SASL mechanism needs gsasl_client_callback_authorization_id() callback (application error)"
-msgstr "Teastaíonn an sásra SASL feidhm gsasl_client_callback_authorization_id() (earráid fheidhmchláir)"
+msgid ""
+"SASL mechanism needs gsasl_client_callback_authorization_id() callback "
+"(application error)"
+msgstr ""
+"Teastaíonn an sásra SASL feidhm gsasl_client_callback_authorization_id() "
+"(earráid fheidhmchláir)"
 
-msgid "SASL mechanism needs gsasl_client_callback_authentication_id() callback (application error)"
-msgstr "Teastaíonn an sásra SASL feidhm gsasl_client_callback_authentication_id() (earráid fheidhmchláir)"
+msgid ""
+"SASL mechanism needs gsasl_client_callback_authentication_id() callback "
+"(application error)"
+msgstr ""
+"Teastaíonn an sásra SASL feidhm gsasl_client_callback_authentication_id() "
+"(earráid fheidhmchláir)"
 
-msgid "SASL mechanism needs gsasl_client_callback_service() callback (application error)"
-msgstr "Teastaíonn an sásra SASL feidhm gsasl_client_callback_service() (earráid fheidhmchláir)"
+msgid ""
+"SASL mechanism needs gsasl_client_callback_service() callback (application "
+"error)"
+msgstr ""
+"Teastaíonn an sásra SASL feidhm gsasl_client_callback_service() (earráid "
+"fheidhmchláir)"
 
-msgid "SASL mechanism needs gsasl_server_callback_validate() callback (application error)"
-msgstr "Teastaíonn an sásra SASL feidhm gsasl_server_callback_validate() (earráid fheidhmchláir)"
+msgid ""
+"SASL mechanism needs gsasl_server_callback_validate() callback (application "
+"error)"
+msgstr ""
+"Teastaíonn an sásra SASL feidhm gsasl_server_callback_validate() (earráid "
+"fheidhmchláir)"
 
-msgid "SASL mechanism needs gsasl_server_callback_cram_md5() callback (application error)"
-msgstr "Teastaíonn an sásra SASL feidhm gsasl_server_callback_cram_md5() (earráid fheidhmchláir)"
+msgid ""
+"SASL mechanism needs gsasl_server_callback_cram_md5() callback (application "
+"error)"
+msgstr ""
+"Teastaíonn an sásra SASL feidhm gsasl_server_callback_cram_md5() (earráid "
+"fheidhmchláir)"
 
-msgid "SASL mechanism needs gsasl_server_callback_digest_md5() callback (application error)"
-msgstr "Teastaíonn an sásra SASL feidhm gsasl_server_callback_digest_md5() (earráid fheidhmchláir)"
+msgid ""
+"SASL mechanism needs gsasl_server_callback_digest_md5() callback "
+"(application error)"
+msgstr ""
+"Teastaíonn an sásra SASL feidhm gsasl_server_callback_digest_md5() (earráid "
+"fheidhmchláir)"
 
-msgid "SASL mechanism needs gsasl_server_callback_anonymous() callback (application error)"
-msgstr "Teastaíonn an sásra SASL feidhm gsasl_server_callback_anonymous() (earráid fheidhmchláir)"
+msgid ""
+"SASL mechanism needs gsasl_server_callback_anonymous() callback (application "
+"error)"
+msgstr ""
+"Teastaíonn an sásra SASL feidhm gsasl_server_callback_anonymous() (earráid "
+"fheidhmchláir)"
 
-msgid "SASL mechanism needs gsasl_server_callback_external() callback (application error)"
-msgstr "Teastaíonn an sásra SASL feidhm gsasl_server_callback_external() (earráid fheidhmchláir)"
+msgid ""
+"SASL mechanism needs gsasl_server_callback_external() callback (application "
+"error)"
+msgstr ""
+"Teastaíonn an sásra SASL feidhm gsasl_server_callback_external() (earráid "
+"fheidhmchláir)"
 
-msgid "SASL mechanism needs gsasl_server_callback_realm() callback (application error)"
-msgstr "Teastaíonn an sásra SASL feidhm gsasl_server_callback_realm() (earráid fheidhmchláir)"
+msgid ""
+"SASL mechanism needs gsasl_server_callback_realm() callback (application "
+"error)"
+msgstr ""
+"Teastaíonn an sásra SASL feidhm gsasl_server_callback_realm() (earráid "
+"fheidhmchláir)"
 
-msgid "SASL mechanism needs gsasl_server_callback_securid() callback (application error)"
-msgstr "Teastaíonn an sásra SASL feidhm gsasl_server_callback_securid() (earráid fheidhmchláir)"
+msgid ""
+"SASL mechanism needs gsasl_server_callback_securid() callback (application "
+"error)"
+msgstr ""
+"Teastaíonn an sásra SASL feidhm gsasl_server_callback_securid() (earráid "
+"fheidhmchláir)"
 
-msgid "SASL mechanism needs gsasl_server_callback_service() callback (application error)"
-msgstr "Teastaíonn an sásra SASL feidhm gsasl_server_callback_service() (earráid fheidhmchláir)"
+msgid ""
+"SASL mechanism needs gsasl_server_callback_service() callback (application "
+"error)"
+msgstr ""
+"Teastaíonn an sásra SASL feidhm gsasl_server_callback_service() (earráid "
+"fheidhmchláir)"
 
-msgid "SASL mechanism needs gsasl_server_callback_gssapi() callback (application error)"
-msgstr "Teastaíonn an sásra SASL feidhm gsasl_server_callback_gssapi() (earráid fheidhmchláir)"
+msgid ""
+"SASL mechanism needs gsasl_server_callback_gssapi() callback (application "
+"error)"
+msgstr ""
+"Teastaíonn an sásra SASL feidhm gsasl_server_callback_gssapi() (earráid "
+"fheidhmchláir)"
 
-msgid "SASL mechanism needs gsasl_server_callback_retrieve() callback (application error)"
-msgstr "Teastaíonn an sásra SASL feidhm gsasl_server_callback_retrieve() (earráid fheidhmchláir)"
+msgid ""
+"SASL mechanism needs gsasl_server_callback_retrieve() callback (application "
+"error)"
+msgstr ""
+"Teastaíonn an sásra SASL feidhm gsasl_server_callback_retrieve() (earráid "
+"fheidhmchláir)"
 
 msgid "Failed to perform Unicode Normalization on string."
 msgstr "Theip ar normalú Unicode ar teaghrán."
@@ -178,7 +300,8 @@ msgid "No more realms available (non-fatal)"
 msgstr "Níl tuilleadh ríochtaí ar fáil (ní marfach)"
 
 msgid "The provided library handle was invalid (application error)"
-msgstr "Is neamhbhailí an lorgán leabharlainne a bhí tugtha (earráid fheidhmchláir)"
+msgstr ""
+"Is neamhbhailí an lorgán leabharlainne a bhí tugtha (earráid fheidhmchláir)"
 
 msgid "Libgsasl unknown error"
 msgstr "Libgsasl: earráid anaithnid"
