--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,10 @@ Note that changes to the GNU SASL Library is documented in lib/NEWS.
 This file track changes to the remaining, non-library, parts of GNU
 SASL.  That include the manual, the command line tool, and self tests.
 
+* Version 0.2.15 (unreleased)
+
+** Changed libgsasl so name.
+
 * Version 0.2.14 (released 2006-08-19)
 
 ** New section "Requirements" in the manual, lists the external components.
