--- a/NEWS
+++ b/NEWS
@@ -8,7 +8,9 @@ SASL.  That include the manual, the command line tool, and self tests.
 
 * Version 0.2.15 (unreleased)
 
-** Changed libgsasl so name.
+** Changed libgsasl shared library version.
+The shared library version was not incremented correctly in the last
+release, even though new APIs were added.
 
 * Version 0.2.14 (released 2006-08-19)
 
