Update PGP key.

--- a/lib/AUTHORS
+++ b/lib/AUTHORS
@@ -6,7 +6,7 @@ Simon Josefsson <simon@josefsson.org>
 Designed and implemented the GNU SASL Library.
 
 -----BEGIN PGP PUBLIC KEY BLOCK-----
-URL: http://josefsson.org/key.txt
+Version: GnuPG v1.4.3-cvs (GNU/Linux)
 Comment: This 0xB565716F key is used to sign releases of GNU SASL.
 
 mKsEPNUHKwEFALqJSBHn6Qk5ex138kwymxA3idCFoTi5Q6mVooEVVaYVfeDG+5uV
