--- a/NEWS
+++ b/NEWS
@@ -6,7 +6,7 @@ Note that changes to the GNU SASL Library is documented in lib/NEWS.
 This file track changes to the remaining, non-library, parts of GNU
 SASL.  That include the manual, the command line tool, and self tests.
 
-* Version 0.2.15 (unreleased)
+* Version 0.2.15 (released 2006-08-22)
 
 ** Changed libgsasl shared library version.
 The shared library version was not incremented correctly in the last
