--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,25 @@
+2006-08-22  Simon Josefsson <simon@josefsson.org>
+
+	* po/de.po, po/eu.po, po/fr.po, po/ga.po, po/nl.po, po/pl.po,
+	po/ro.po, po/sq.po, po/sr.po, po/sv.po, po/vi.po, po/zh_CN.po:
+	Generated.
+
+2006-08-22  Simon Josefsson <simon@josefsson.org>
+
+	* NEWS: Version 0.2.15.
+
+2006-08-21  Simon Josefsson <simon@josefsson.org>
+
+	* NEWS: Fix.
+
+2006-08-21  Simon Josefsson <simon@josefsson.org>
+
+	* gl/m4/gnulib-comp.m4, gl/m4/strerror_r.m4: Update.
+
+2006-08-21  Simon Josefsson <simon@josefsson.org>
+
+	* NEWS, configure.ac: Bump version.
+
 2006-08-19  Simon Josefsson <simon@josefsson.org>
 
 	* AUTHORS: Update key.
