--- a/doc/lgpl.texi
+++ b/doc/lgpl.texi
@@ -6,7 +6,7 @@
 
 @display
 Copyright @copyright{} 1991, 1999 Free Software Foundation, Inc.
-51 Franklin St -- Fifth Floor, Boston, MA 02110-1301, USA
+51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA
 
 Everyone is permitted to copy and distribute verbatim copies
 of this license document, but changing it is not allowed.
