--- a/lib/NEWS
+++ b/lib/NEWS
@@ -4,6 +4,8 @@ See the end for copying conditions.
 
 * Version 0.3.0 (unreleased)
 
+** Fix gsasl_check_version logic.
+
 ** Added an experimental implementation of the GS2 mechanism.
 The mechanism disabled by default, but you can enable it by specifying
 --enable-gs2 when you run configure.  The mechanism requires an
