--- a/lib/gs2/README
+++ b/lib/gs2/README
@@ -1,8 +1,9 @@
 GS2 README -- Notes on the implementation
-Copyright (C) 2006 Simon Josefsson
+Copyright (C) 2006, 2007 Simon Josefsson
 See the end for copying conditions.
 
-This directory hold an implementation of GS2.
+This directory holds an unfinished implementation of GS2, pending
+finalization of the standard.
 
 This module is written in portable C89.  It may be used as a
 stand-alone implementation, outside of the framework that GNU SASL
