--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,8 @@ SASL.  That include the manual, the command line tool, and self tests.
 
 * Version 0.2.16 (unreleased)
 
+** Translation updates.
+
 ** Update of gnulib files.
 
 * Version 0.2.15 (released 2006-08-22)
