--- a/NEWS
+++ b/NEWS
@@ -18,6 +18,8 @@ SASL.  That include the manual, the command line tool, and self tests.
 
 ** Update of gnulib files.
 
+** Now uses autoconf 2.61, automake 1.10, gettext 0.16.1.
+
 * Version 0.2.15 (released 2006-08-22)
 
 ** Changed libgsasl shared library version.
