--- a/NEWS
+++ b/NEWS
@@ -6,7 +6,7 @@ Note that changes to the GNU SASL Library is documented in lib/NEWS.
 This file track changes to the remaining, non-library, parts of GNU
 SASL.  That include the manual, the command line tool, and self tests.
 
-* Version 0.2.16 (unreleased)
+* Version 0.2.16 (released 2007-04-20)
 
 ** Fix IMAP protocol usage in the 'gsasl' command-line tool server.
 
