--- a/NEWS
+++ b/NEWS
@@ -11,6 +11,8 @@ SASL.  That include the manual, the command line tool, and self tests.
 ** GNU SASL is now developed using Git instead of CVS.
 A public git mirror is available from <http://repo.or.cz/w/gsasl.git>.
 
+** Update gnulib files.
+
 ** Polish, Swedish and Vietnamese translations updated.
 Thanks to Jakub Bogusz, Daniel Nylander, and Clytie Siddall.
 
