--- a/doc/gsasl.texi
+++ b/doc/gsasl.texi
@@ -15,7 +15,7 @@
 This manual is last updated @value{UPDATED} for version
 @value{VERSION} of GNU SASL.
 
-Copyright @copyright{} 2002, 2003, 2004, 2005, 2006 Simon Josefsson.
+Copyright @copyright{} 2002, 2003, 2004, 2005, 2006, 2007 Simon Josefsson.
 
 @quotation
 Permission is granted to copy, distribute and/or modify this document
@@ -2109,8 +2109,20 @@ otherwise @code{GSASL_AUTHENTICATION_ERROR}.
 @end menu
 
 @include fdl.texi
-@include lgpl.texi
-@include gpl.texi
+
+@node GNU LGPL
+@appendixsec GNU Lesser General Public License
+@cindex LGPL, GNU Lesser General Public License
+@cindex License, GNU LGPL
+
+@include lgpl-2.1.texi
+
+@node GNU GPL
+@appendixsec GNU General Public License
+@cindex GPL, GNU General Public License
+@cindex License, GNU GPL
+
+@include gpl-3.0.texi
 
 @node Function and Data Index
 @unnumbered Function and Data Index
