--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,16 @@ SASL.  That include the manual, the command line tool, and self tests.
 
 * Version 0.2.19 (unreleased)
 
+** Command-line tools, examples, etc are now licensed under GPL version 3.
+The library is still licensed under LGPL v2.1 for compatibility
+reasons.
+
+** Updated documentation as per license change.
+
+** Update gnulib files.
+
+** Update translations.
+
 * Version 0.2.18 (released 2007-06-07)
 
 ** Update gnulib files.
