--- a/doc/gsasl.texi
+++ b/doc/gsasl.texi
@@ -120,9 +120,9 @@ that support client and server mode, and the IMAP and SMTP protocols,
 fits in under 60kb on an Intel x86 platform, without any modifications
 to the code.  (This figure was accurate as of version 0.0.13.)
 
-The library is licensed under the GNU Lesser General Public License,
-and the command-line interface, self-tests and examples are licensed
-under the GNU General Public License.
+The library is licensed under the GNU Lesser General Public License
+version 2.1, and the command-line interface, self-tests and examples
+are licensed under the GNU General Public License version 3.0.
 
 @float Illustration,fig:abstraction
 @image{abstraction,10cm,5cm}
@@ -172,8 +172,8 @@ a similar job.
 @table @asis
 @item It's Free Software
 Anybody can use, modify, and redistribute it under the terms of the
-GNU General Public License.  The library can even be distributed under
-the GNU Lesser General Public License.
+GNU General Public License version 3.0.  The library can also be
+distributed under the GNU Lesser General Public License version 2.1.
 
 @item It's thread-safe
 No global variables are used and multiple library handles and session
