--- a/NEWS
+++ b/NEWS
@@ -8,9 +8,9 @@ SASL.  That include the manual, the command line tool, and self tests.
 
 * Version 0.2.19 (unreleased)
 
-** Command-line tools, examples, etc are now licensed under GPL version 3.
-The library is still licensed under LGPL v2.1 for compatibility
-reasons.
+** Command-line tools, examples, etc are now licensed under the
+** GPL version 3 (or later).
+The library remains licensed under LGPL version 2.1 (or later).
 
 ** Updated documentation as per license change.
 
